# cedar-server

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TRADEMARKS.md  about.md  build.rs  build.sh  building.md  cedar_flutter  format-rust.sh  notes.txt  polar_align.md  release_notes.md  run.sh  rustfmt.toml  todo.txt
.github/workflows/: ci.yml
cedar/: cedar-aim  tetra3_server
cedar/data/: default_database.npz
cedar_flutter/: .gitignore  README.md  pubspec.yaml
cedar_flutter/lib/: draw_slew_target.dart  draw_util.dart  exp_values.dart  geolocation.dart  get_cedar_client.dart  get_cedar_client_for_web.dart  get_channel.dart  get_channel_for_web.dart  main.dart  server_log.dart  settings.dart  themes.dart
cedar_flutter/web/: index.html  manifest.json
cedar_webapp/: .metadata  README.md  pubspec.yaml
cedar_webapp/lib/: main.dart
cedar_webapp/test/: widget_test.dart
cedar_webapp/web/: index.html  manifest.json
create_cedar_image/: README.txt  add_rpi_user.py  cedar-ap-power.service  cedar-ap-setup.py  cedar-ap-setup.service  create_userconf.py  customize-pi-image.sh  enable_ssh.py  install-cedar-ap-setup.py  install_cedar.sh  modify_cmdline.py  modify_swap.py  mount_img.py  resize_fs.py  set_hostname.py  update_upgrade_chroot.py
elements/: Cargo.toml  build.rs
elements/src/: astro_util.rs  cedar_sky_trait.rs  hot_pixel_trait.rs  image_utils.rs  imu_trait.rs  lib.rs  reservoir_sampler.rs  solver_trait.rs  value_stats.rs  wifi_trait.rs
elements/src/proto/: cedar.proto  cedar_common.proto  cedar_sky.proto
run/: cedar_log.txt.2025-11-06  run.sh
run/demo_images/: readme.txt
server/: Cargo.toml
server/src/: activity_led.rs  bonding_helper.rs  calibrator.rs  cedar_server.rs  detect_engine.rs  imu6050.rs  lib.rs  lx200.rs  lx200_server.rs  motion_estimator.rs  polar_analyzer.rs  position_reporter.rs  rate_estimator.rs  serve_engine.rs  solve_engine.rs
server/tests/: e2e_plate_solve.rs
server/tests/common/: corpus.rs  fake_solver.rs  harness.rs  mod.rs  report.rs
src/: activity_led.rs  astro_util.rs  build.sh  calibrator.rs  cedar_server.rs  cedar_sky_trait.rs  client.rs  detect_engine.rs  focus_engine.rs  focus_server.rs  image_utils.rs  lib.rs  motion_estimator.rs  multiplex_service.rs  polar_analyzer.rs  position_reporter.rs  rate_estimator.rs  reservoir_sampler.rs  run.sh  scale_image.rs  server.rs  solve_engine.rs  solver_trait.rs  tetra3_server.py  tetra3_subprocess.rs  value_stats.rs
src/proto/: cedar.proto  cedar_common.proto  cedar_sky.proto  tetra3.proto
