[package]
name = "cedar"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the Cedar gRPC server.
name = "cedar-server"
path = "src/bin/cedar_server.rs"

[dependencies]
ascom-alpaca = { version = "1.0.0-beta.1", features = ["server", "telescope"] }
asi_camera2 = { version = "0.1.0", path = "../asi_camera2" }
async-std = "1.12.0"
async-trait = "0.1.74"
axum = "0.6.19"
camera_service = { version = "0.1.0", path = "../camera_service" }
canonical-error = "0.1.0"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["http1", "http2"] }
image = "0.24.6"
imageproc = "0.23.0"
log = "0.4.19"
prost = "0.11"
prost-build = "0.11.9"
prost-types = "0.11.9"
star_gate = { version = "0.3.0", path = "../star_gate" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.9"
tonic-web = "0.9.2"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11.9"
