[package]
name = "cedar-server"
version = "0.6.1"
edition = "2021"

[[bin]] # Bin to run the Cedar Box gRPC server.
name = "cedar-box-server"
path = "src/bin/cedar_box_server.rs"

[dependencies]
approx = "0.5.1"
ascom-alpaca = { version = "1.0.0-beta.3", features = ["server", "telescope"] }
async-std = "1.12.0"
async-trait = "0.1.77"
axum = "0.6.20"
cedar-camera = { version = "0.3.0", path = "../cedar-camera" }
canonical-error = "0.1.0"
futures = "0.3.30"
hyper = { version = "0.14.31", features = ["http1", "http2"] }
image = "0.25.2"
imageproc = "0.25.0"
log = "0.4.19"
medians = "3.0.5"
prost = "0.12.3"
prost-types = "0.12.3"
rolling-stats = "0.7.0"
cedar_detect = { version = "0.7.0", path = "../cedar-detect" }
statistical = "1.0.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tonic = "0.11"
tonic-web = "0.11.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = "0.4.31"
ctrlc = "3.4.2"
tracing-appender = "0.2.3"
nix = { version = "0.28.0", features = ["time"] }
astro = "2.0.0"
rand = "0.8.5"
pico-args = "0.5.0"
nalgebra = "0.33.0"
glob = "0.3.1"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12.3"

[profile.dev]
panic = 'abort'
