[package]
name = "cedar-server"
version = "0.9.3"
edition = "2021"

[[bin]] # Bin to run the Cedar Box gRPC server.
name = "cedar-box-server"
path = "src/bin/cedar_box_server.rs"

[dependencies]
approx = "0.5.1"
ascom-alpaca = { version = "1.0.0-beta.3", features = ["server", "telescope"] }
async-trait = "0.1.77"
axum = "0.6.20"
canonical-error = "0.1.0"
cedar-camera = { version = "0.3.0", path = "../../cedar-camera" }
cedar_detect = { version = "0.7.0", path = "../../cedar-detect" }
cedar-elements = { path = "../elements" }
chrono = "0.4.31"
clap = "4.5.23"
ctrlc = "3.4.2"
env_logger = "0.11.5"
futures = "0.3.30"
glob = "0.3.1"
hyper = { version = "0.14.31", features = ["http1", "http2"] }
image = "0.25.2"
imageproc = "0.25.0"
log = "0.4.19"
nix = { version = "0.28.0", features = ["time"] }
pico-args = "0.5.0"
prost = "0.12.3"
prost-types = "0.12.3"
tetra3_server = { version = "0.1.0", path = "../../tetra3_server" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"
tonic-web = "0.11.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "cors"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
